<resources>
    <string name="app_name">Agenda-N70</string>
    <string name="novoEvento">Novo Evento</string>
    <string name="nomeEvento">Título:</string>
    <string name="tipoRepet">Repetição:</string>
    <string name="iniciaem">Data de início:</string>
    <string name="termina">Termino:</string>
    <string name="nunca">Nunca</string>
    <string name="apos">Após</string>
    <string name="ocorrencias">ocorrências</string>
    <string name="terminaem">Em</string>
    <string name="concluido">Concluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="em">Em</string>
    <string name="salvar">Salvar</string>
    <string name="data">Data:</string>
    <string name="participantes">Participantes:</string>
    <string name="repeti_o">Repetição:</string>
    <string name="tipo_do_evento">Tipo do Evento:</string>
    <string name="local">Local:</string>
    <string name="editar_evento">Editar Evento:</string>
    <string name="editar_compromisso">Editar Compromisso</string>
    <string name="detalhes_compromisso">Detalhes Compromisso</string>
</resources>
