<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.engenharia.agendan70.NewEventActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novoEvento"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeEvento"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/campoTitulo"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/campoLocal"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/tipo_do_evento"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/campoTipoEvento"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/repeti_o"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/campoRepeticao"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/campoData"
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/participantes"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/campoParticipante"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_concluido"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:onClick="gotoSalvar"
            android:textSize="18sp"
            android:layout_marginLeft="40dp"/>
        <Button
            android:id="@+id/bt_cancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:onClick="gotoCancelar"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>