<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.engenharia.agendan70.ViewEventActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalhes_compromisso"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeEvento"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/campoTitulo"
            android:enabled="false"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/campoLocal"
            android:enabled="false"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/tipo_do_evento"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/campoTipoEvento"
            android:enabled="false"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/repeti_o"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/campoRepeticao"
            android:enabled="false"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/campoData"
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/participantes"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/campoParticipante"
            android:enabled="false"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_cancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Voltar"
            android:onClick="gotoVoltar"
            android:textSize="18sp"
            android:layout_marginLeft="115dp"/>
    </LinearLayout>
</LinearLayout>