<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.engenharia.agendan70.EditEventActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novoEvento"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeEvento"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/titulo"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Local: "
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/local"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Tipo do Evento: "
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner0"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Repetição:          "
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciaem"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/dt_inicio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Data de fim: "
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/dt_fim"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Participantes: "
            android:textSize="18sp"/>
        <EditText
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:id="@+id/participante"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_concluido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:onClick="gotoSalvar"

            android:textSize="18sp"/>
        <Button
            android:id="@+id/bt_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:onClick="gotoCancelar"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>